bin/testsuite/tests/compiler/src/errors/compiler4031.swg
#global testerror "Err0584"

#test
{
    while true
    {
    }
}
